...
                        } else if (!passwordState.isValid) {
                            scaffoldState.snackbarHostState.showSnackbar(passwordState.errorMessage)
                        } else {
                            try {
                                inProgress = true
                                if (!accountService.isValidEmail(email = emailState.text)) {
                                    throw FirebaseAuthEmailException("email", "isMalFormed")
                                }
                                if (!accountService.isValidPassword(password = passwordState.text)) {
                                    throw FirebaseAuthException("password", "isMalFormed")
                                }
                                viewModel.addPassword(password = passwordState.text)
                                viewModel.addEmail(email = emailState.text)
                                onSuccessfulSignUp()
                            } catch (e: FirebaseAuthEmailException) {
                                scaffoldState
...
